# python-superlogger

./: .editorconfig  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  pyproject.toml
src/: __init__.py  abstract.py  enum.py  logger.py
test/unit/: test_abstractions.py  test_logger.py
