[tool.poetry]
name = "superlogger"
version = "0.0.0"
description = "A simple and powerful logger for Python"
authors = ["Matheus Pelegrinetti <pelegrinetti.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src/*.py"}]
repository = "https://github.com/Pelegrinetti/python-supperlogger"
keywords = ["superlogger", "logger", "logging"]


[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pre-commit = "^3.5.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 80
indent-width = 4

target-version = "py38"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
